--- a/docker/Dockerfile.local
+++ b/docker/Dockerfile.local
@@ -1,7 +1,7 @@
 # This Dockerfile variant uses a previously cloned CANalyzat0r folder instead
 # of cloning it from GitHub - useful for development purposes.
 
-FROM ubuntu:16.04
+FROM ubuntu:latest
 LABEL maintainer "Philipp Schmied <pschmied@schutzwerk.com>"
 
 
@@ -27,4 +27,7 @@ ADD CANalyzat0r /opt/CANalyzat0r
 RUN /opt/CANalyzat0r/install_requirements.sh
 
 WORKDIR /opt/CANalyzat0r
+# Test the image
+RUN ./CANalyzat0r.sh "smoketest"
+
 CMD ["/bin/bash", "CANalyzat0r.sh"]
