fix local dockerfile

--- a/docker/Dockerfile.local
+++ b/docker/Dockerfile.local
@@ -1,9 +1,8 @@
 # This Dockerfile variant uses a previously cloned CANalyzat0r folder instead
 # of cloning it from GitHub - useful for development purposes.
 
-FROM ubuntu:latest
+FROM ubuntu:18.04
 LABEL maintainer "Philipp Schmied <pschmied@schutzwerk.com>"
-
 
 # Install git
 RUN apt-get update && \
@@ -13,7 +12,7 @@ RUN apt-get update && \
 
 # Prepare the GUI
 RUN mkdir ~/.config
-ADD Trolltech.conf /tmp/Trolltech.conf
+ADD docker/Trolltech.conf /tmp/Trolltech.conf
 RUN cat /tmp/Trolltech.conf >> ~/.config/Trolltech.conf && \
     rm /tmp/Trolltech.conf
 
@@ -21,7 +20,7 @@ RUN cat /tmp/Trolltech.conf >> ~/.config/Trolltech.conf && \
 ENV QT_X11_NO_MITSHM 1
 
 # Add the CANalyzat0r folder
-ADD CANalyzat0r /opt/CANalyzat0r
+ADD . /opt/CANalyzat0r
 
 # Install the CANalyzat0r dependencies using the bundled script
 RUN /opt/CANalyzat0r/install_requirements.sh
